Arquivos de Deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,11 @@ install:
 script:
   - python -m unittest -v test
 
+# Definir o Deploy no Heroku
+deploy:
+  provider: heroku
+  api_key: $HEROKU_API_KEY
+  edge: true 
+  app: devopslab-andersong
+  on:
+      branch: main
