--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ addons:
     organization: agirelli2021
     token: ${SONAR_TOKEN}
 
+before_install:
+  - openssl aes-256-cbc -K $encrypted_ab2494ea22c8_key -iv $encrypted_ab2494ea22c8_iv -in lab-devops-cloud-01-1a8bed6bb7bc.json.enc -out ../lab-devops-cloud-01-1a8bed6bb7bc.json -d
+
 jobs:
   include:
     - stage: Build & Tests
@@ -47,3 +50,20 @@ jobs:
       name: GET URL Stage
       script:
         - curl https://devopslab-andersong.herokuapp.com/ | grep Hello || travis_terminate 1;
+
+    - stage: Production Deploy
+      name: Google Api Engine
+      script: skip
+
+      # Definir o Deploy no Google Cloud
+      deploy:
+        provider: gae
+        keyfile: ../lab-devops-cloud-01-1a8bed6bb7bc.json
+        project: lab-devops-cloud-01
+        on:
+          branch: main
+
+    - stage: Production Test
+      name: GET URL Production
+      script:
+        - curl https://lab-devops-cloud-01.uc.r.appspot.com/ | grep Hello || travis_terminate 1;
